# icp-2025

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  imgui.ini  shell.nix  vcpkg.json
assets/misc/: blocks.json
assets/models/: chest.mtl  chest2.mtl  steve.mtl
assets/shaders/: block.glsl
include/: atlas.hpp  block.hpp  block_registry.hpp  buffer.hpp  camera.hpp  camera_controller.hpp  chunk.hpp  chunk_manager.hpp  core.hpp  debug_layer.hpp  direction.hpp  dr_mp3.h  fps_counter.hpp  game_layer.hpp  imgui_layer.hpp  index_buffer.hpp  input.hpp  job_system.hpp  key_codes.hpp  layer.hpp  layer_stack.hpp  lightbulb.hpp  mesh.hpp  music_manager.hpp  pch.hpp  screenshot.hpp  scuffcraft.hpp  shader.hpp  thread_pool.hpp  time.hpp  uuid.hpp  vertex.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp  window.hpp  world.hpp  world_generator.hpp
include/asset/: asset.hpp  asset_importer.hpp  asset_manager.hpp
include/audio/: audio.hpp  audio_api.hpp  audio_engine.hpp  audio_source.hpp
include/detection/: cross_drawer.hpp  face_detection_app.hpp  face_processor.hpp  fps_meter.hpp  image_processor.hpp
include/entity/: entity_type.hpp
include/event/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
include/layer/: debug_layer.hpp  game_layer.hpp  imgui_layer.hpp  layer.hpp  layer_stack.hpp
include/render/: buffer.hpp  index_buffer.hpp  material.hpp  render_command.hpp  renderer.hpp  renderer3d.hpp  renderer_api.hpp  shader.hpp  sub_texture.hpp  texture.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp
include/world/: chunk.hpp  chunk_manager.hpp  components.hpp  entity.hpp  world.hpp
include/worldgen/: surface_decorator.hpp  terrain_shaper.hpp  world_generator.hpp
resources/: blocks.json
scripts/: build.sh  marcilek-vcpkg.sh
shaders/: fragment.shader  shader.frag  shader.vert  vertex.shader
src/: app.cpp  app.hpp  block.cpp  block_registry.cpp  camera.cpp  camera_component.cpp  camera_controller.cpp  chunk.cpp  chunk_manager.cpp  debug_layer.cpp  dr_mp3.cpp  game_layer.cpp  imgui_layer.cpp  index_buffer.cpp  job_system.cpp  layer.cpp  layer_stack.cpp  main.cpp  mesh.cpp  music_manager.cpp  scuffcraft.cpp  shader.cpp  stb_image.cpp  thread_pool.cpp  time.cpp  uuid.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp  world.cpp  world_generator.cpp
src/asset/: asset_importer.cpp  asset_manager.cpp
src/audio/: audio.cpp  audio_api.cpp  audio_source.cpp
src/cv01/: lightbulb.cpp
(+55 files in other folders)
